--- a/index.html
+++ b/index.html
@@ -10,58 +10,62 @@
 
 <p>consider many different issues when managing projects
 Systems Thinking => holistic view of carrying out the projects within the context of the organization
-System Approach => Systems Philosophy, Systems Analysis, Systems Management
+System Approach => Systems Philosophy, Systems Analysis, Systems Management</p><br>
 
-1)What are systems?
+<p>1)What are systems?
 Sets od interacting components working within an environment
 Eg, human body => brain, skeletal,digestive system
-banking app => frontend,UI,UX,backend,database,payment gateway
+banking app => frontend,UI,UX,backend,database,payment gateway</p><br>
 
-2)What is a system philosophy?
-An overall model for thinking about things as system
+<p>2)What is a system philosophy?
+An overall model for thinking about things as system</p><br>
 
-3)What  is system thinking?
+<p>3)What  is system thinking?
 Taking a holistic view of projects and how it is situated with larger organizations
-Eg, having a call center for responding customer issues accordingly
+Eg, having a call center for responding customer issues accordingly</p><br>
 
-4)What is systems analysis?
-problem-solving approach to define the scope and evaluate its problems,opportunities,constraints,and needs
+<p>4)What is systems analysis?
+problem-solving approach to define the scope and evaluate its problems,opportunities,constraints,and needs</p><br>
 
-5)What is systems management?
+<p>5)What is systems management?
 address the business,technological and organizational issues with creating, maintaining and modifying a system
-Eg, adding a new feature to an application
+Eg, adding a new feature to an application</p><br>
 
-The three sphere-model for systems management (Orgaization,Business,Technology)
+<p>The three sphere-model for systems management (Orgaization,Business,Technology)
 Example, the laptop projects of a college
-Organization => think about the effects of this project
-Business     => think about the cost of this project
-Technology   => think about the technical tasks
+    <ul>
+<li>Organization => think about the effects of this project</li>
+<li>Business     => think about the cost of this project</li>
+<li>Technology   => think about the technical tasks</li></ul><p><br>
 
-Four frames of organizations
-1)Structural frames - Organizational Chart
-2)Human Resources frames - balance needs of organization and needs of people
-3)Political Frames -Conflicts and Power are key issues
-4)Symbolic Frame - Culture,Language,Traditions, Images
+<p>Four frames of organizations
+<ul>
+<li>1)Structural frames - Organizational Chart</li>
+<li>2)Human Resources frames - balance needs of organization and needs of people</li>
+<li>3)Political Frames -Conflicts and Power are key issues</li>
+<li>4)Symbolic Frame - Culture,Language,Traditions, Images</li></ul></p>
 
-Three Organizational Structures
-1)Functional
-2)Matrix ()
-3)Project
+<p>Three Organizational Structures
+<ul>
+<li>1)Functional</li>
+<li>2)Matrix ()</li>
+<li>3)Project</li></ul><p>
 
-Organizational Culture
+<p>Organizational Culture
 Eaxmple,
-a silent working environment may occur in IT Dept rather than other departments
+<ul><li>a silent working environment may occur in IT Dept rather than other departments</li></ul></p>
 
-10 Characteristics of Organizational Culture
-1)Member Identity
-2)Group emphasis
-3)People focus
-4)Unit Integration
-5)Control
-6)Risk Tolerance
-7)Reward Criteria
-8)Conflict Tolerance
-9)Means-ends orientation - outcomes driven
-10)Open-system focus - eg, nokia didn't have it</p>
+<p>
+<ul>10 Characteristics of Organizational Culture
+<li>1)Member Identity</li>
+<li>2)Group emphasis</li>
+<li>3)People focus</li>
+<li>4)Unit Integration</li>
+<li>5)Control</li>
+<li>6)Risk Tolerance</li>
+<li>7)Reward Criteria</li>
+<li>8)Conflict Tolerance</li>
+<li>9)Means-ends orientation - outcomes driven</li>
+<li>10)Open-system focus - eg, nokia didn't have it</li></ul></p>
 </body>
 </html>
