--- a/index.html
+++ b/index.html
@@ -9,27 +9,31 @@
     <h3>L2 Project Management & IT Context</h3>
 
 <p>consider many different issues when managing projects
-Systems Thinking => holistic view of carrying out the projects within the context of the organization
-System Approach => Systems Philosophy, Systems Analysis, Systems Management</p><br>
+<ul>
+<li>Systems Thinking => holistic view of carrying out the projects within the context of the organization</li>
+<li>System Approach => Systems Philosophy, Systems Analysis, Systems Management</li></p><br></ul>
 
 <p>1)What are systems?
 Sets od interacting components working within an environment
-Eg, human body => brain, skeletal,digestive system
-banking app => frontend,UI,UX,backend,database,payment gateway</p><br>
+<ul>
+<li>Eg, human body => brain, skeletal,digestive system</li>
+<li>banking app => frontend,UI,UX,backend,database,payment gateway</li></ul></p><br>
 
 <p>2)What is a system philosophy?
 An overall model for thinking about things as system</p><br>
 
 <p>3)What  is system thinking?
-Taking a holistic view of projects and how it is situated with larger organizations
-Eg, having a call center for responding customer issues accordingly</p><br>
+<ul>
+<li>Taking a holistic view of projects and how it is situated with larger organizations</li>
+<li>Eg, having a call center for responding customer issues accordingly</li></ul></p><br>
 
 <p>4)What is systems analysis?
 problem-solving approach to define the scope and evaluate its problems,opportunities,constraints,and needs</p><br>
 
 <p>5)What is systems management?
-address the business,technological and organizational issues with creating, maintaining and modifying a system
-Eg, adding a new feature to an application</p><br>
+    <ul>
+<li>address the business,technological and organizational issues with creating, maintaining and modifying a system</li>
+<li>Eg, adding a new feature to an application</li></ul></p><br>
 
 <p>The three sphere-model for systems management (Orgaization,Business,Technology)
 Example, the laptop projects of a college
